--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wizard's Wiki</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jim+Nightshade&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kings&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lancelot&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kotta+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Milonga&display=swap" rel="stylesheet">
+
+
+
+
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
@@ -21,7 +40,7 @@
         </section>
         <section id="table-of-contents">
             <h3>Table of Contents</h3>
-            <ol type="I">
+            <ol type="I" class="list">
                 <li>Introduction to Wizards</li>
                 <li>Wizard Spells</li>
                 <li>Wizard Staffs</li>
@@ -35,9 +54,10 @@
         </section>
         <section id="wizard-spells">
             <div>
+                <h2>Wizard Spells</h2>
                 <h3>Types of Spells</h3>
                 <p>Wizard spells can be categorized into several types based on their effects:</p>
-                <ul>
+                <ul class="list">
                     <li>Elemental Spells: Control the forces of nature, like fire, water, air, and earth.</li>
                     <li>Healing Spells: Restore health and cure ailments.</li>
                     <li>Enchantments: Bestow magical properties upon objects.</li>
