added spells page. no update to css to0 hard

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
         </section>
-        <section id="table-of-contents">
+        <section id="toc-index">
             <h3>Table of Contents</h3>
             <ol type="I" class="list">
                 <li>Introduction to Wizards</li>
@@ -96,15 +96,17 @@
         </section>
     </main>
     <footer>
+        <section id="related-articles">
         <h2>Seeking More?</h2>
         <article>
             <h3>The Grand Codex of Arcane Incantations: Mastering the Art of Wizard Spells</h3>
-            <img>
+            <img src="Assets/images/Spells.png" width="200">
         </article>
         <article>
             <h3>The Artisanal Craft of Wizard Staffs: Forging and Selecting the Enchanted Rods of Power</h3>
-            <img>
+            <img src="Assets/images/Spells.png" width="200">
         </article>
+        </section>
         <section id>
 
         </section>
