some upddates. not sure if they added much tho

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
     <footer>
         <section id="related-articles">
         <h2>Seeking More?</h2>
-        <article>
+        <article class="related">
             <h3>The Grand Codex of Arcane Incantations: Mastering the Art of Wizard Spells</h3>
             <img src="Assets/images/Spells.png" width="200">
         </article>
-        <article>
+        <article class="related">
             <h3>The Artisanal Craft of Wizard Staffs: Forging and Selecting the Enchanted Rods of Power</h3>
             <img src="Assets/images/Spells.png" width="200">
         </article>
