added more css to spells and started on nav

--- a/index.html
+++ b/index.html
@@ -28,6 +28,25 @@
 <body>
     <header>
         <h1>Wizard's Wiki</h1>
+        <nav>
+            <menu id="main-menu">
+                <li>
+                    <a href="spells.html">
+                         <img src="Assets/images/Group 2.svg"> Spells Page
+                     </a>
+                </li>
+                <li>
+                    <a href="staffs.html">
+                         <img src="Assets/images/staff-svg.svg">Staffs Page
+                    </a>
+                </li>
+                <li>
+                    <a href="staffs.html">
+                        
+                    </a>
+                </li>
+            </menu>
+        </nav>
     </header>
     <main>
         <section id="about-the-wiki">
