--- a/spells.html
+++ b/spells.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jim+Nightshade&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kings&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lancelot&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kotta+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Milonga&display=swap" rel="stylesheet">
+
+
+
+
+    <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
     <section>
@@ -23,7 +43,7 @@
         <ol type="I">
             <li>Elemental Spells</li>
             <ul>
-                <li>Fire Spells</li>
+                <li> <a href="#fire-spells">Fire Spells</a> </li>
                 <li>Water Spells</li>
                 <li>Lightening Spells</li>
                 <li>Earth Spells</li>
@@ -42,9 +62,10 @@
              What we have here are just a few of the simplest spells. 
              All of which can also be combined in some way.</p>
     </section>
-    <section id="fire-Spells">
+    <section id="fire-spells">
         <h2>Fire Spells</h2>
-        <div class="fireball">
+        <div class="spell-l">
+            <div>
             <h3>Fireball</h3>
             <h4>
                 Mana Cost - 2<br>
@@ -54,9 +75,11 @@
                 The Fireball spell is fairly common.  This is due to its extremely easy mastery level in addition to its low mana cost.  
                 For such a simple spell, it packs a good bit of heat. Literally. 
             </p>
-            <img>
+            </div>
+            <img src="Assets/images/Fire-ball.svg">
         </div>
-        <div class="sunflame">
+        <div class="spell-r">
+            <div>
             <h3>Sunflame</h3>
             <h4>
                 Mana Cost - 30<br>
@@ -67,7 +90,8 @@
                 This spell spawns a miniature Sun and slings it towards an enemy causing a great fiery explosion.  
                 Its destruction is formidable, with enough power to destroy entire forests.
             </p>
-            <img>
+            </div>
+            <img src="Assets/images/sunflame.svg">
         </div>
         
     </section>
@@ -75,7 +99,8 @@
     <section id="water-spells">
        <h2>Water Spells</h2>
         
-        <div class="water-wall">
+        <div class="spell-l">
+            <div>
            <h3>Water Wall</h3>
             <h4>
                 Mana Cost - 6<br>
@@ -87,9 +112,11 @@
                 This can be useful to help control the battlefield. 
                  Additionally, this amount of water can be reused for other water spells.
             </p>
-            <img>
+            </div>
+            <img src="Assets/images/waterwall.svg">
         </div>
-        <div class="typhoon">
+        <div class="spell-r">
+            <div>
             <h3>Typhoon</h3>
             <h4>
                 Mana Cost - 45<br>
@@ -100,12 +127,14 @@
                  It is very uncommon that one can survive being sucked into such a spell.
                   Its size alone requires a great mastery in the element of Water, let alone enough focus and strength to keep it going. 
             </p>
-            <img>
+            </div>
+            <img src="Assets/images/typhoon.svg">
         </div>
     </section>
     <section id="lightening-spells">
         <h2>Lightening Spells</h2>
-        <div class="bolt">
+        <div class="spell-l">
+            <div>
             <h3>Lightening Bolt</h3>
             <h4>
                 Mana Cost - 8<br>
@@ -116,9 +145,11 @@
                 This spell conjures up quickly, and fires in the blink of an eye. 
                  It damage is effective and hard to evade.  This is a great middle-level spell. 
             </p>
+            </div>
             <img>
         </div>
-        <div class="super-conductor">
+        <div class="spell-r">
+            <div>
             <h3>Super Conuctor</h3>
             <h4>
                 Mana Cost - 35<br>
@@ -129,13 +160,15 @@
                 Firing constant lighting bolts strong enough to destroy castle walls, this spell is not to be taken lightly. 
                  It is very uncommon to encounter this spell as it takes a mastery of multiple elements before you can perform Super Conductor.
             </p>
+            </div>
             <img>
         </div>
     </section>
 
     <section id="earth-spells">
         <h2>Earth Spells</h2>
-        <div class="boulder">
+        <div class="spell-l">
+            <div>
             <h3>Boulder</h3>
             <h4>
                 Mana Cost - 8<br>
@@ -146,9 +179,11 @@
                  Boulders range in size depending on the Wizard who wields them. 
                  Some have even gotten so skilled they can create multiple at once.
             </p>
+            </div>
             <img>
         </div>
-        <div class="tremor">
+        <div class="spell-r">
+            <div>
             <h3>Tremor</h3>
             <h4>
                 Mana Cost - 50<br>
@@ -160,13 +195,15 @@
                 Such a spell as destructive as this one is impossible to control.  
                 One can only cast and hope they don't die from the aftermath.
             </p>
+            </div>
             <img>
         </div>
     </section>
 
     <section id="wind-spells">
         <h2>Winds Spells</h2>
-        <div class="wind-disc">
+        <div class="spell-l">
+            <div>
             <h3>Wind Disc</h3>
             <h4>
                 Mana Cost - 5<br>
@@ -178,9 +215,11 @@
                 Though these can be dispelled quite easily, they are quick and ferocious.  
                 They are quite handy when thet are thrown in at random.
             </p>
+            </div>
             <img>
         </div>
-        <div class="twister">
+        <div class="spell-r">
+            <div>
             <h3>Twister</h3>
             <h4>
                 Mana Cost - 20<br>
@@ -191,6 +230,7 @@
                 Such a spell is wondrous for crowd control and destroying enemy artillery.  
                 This spell can also be mixed with any flame spell to create a formidable combination.
             </p>
+            </div>
             <img>
         </div>
     </section>
