almost done with spells css

--- a/spells.html
+++ b/spells.html
@@ -146,7 +146,7 @@
                  It damage is effective and hard to evade.  This is a great middle-level spell. 
             </p>
             </div>
-            <img>
+            <img src="Assets/images/lightening-bolt.svg">
         </div>
         <div class="spell-r">
             <div>
@@ -161,7 +161,7 @@
                  It is very uncommon to encounter this spell as it takes a mastery of multiple elements before you can perform Super Conductor.
             </p>
             </div>
-            <img>
+            <img src="Assets/images/superconductor.svg">
         </div>
     </section>
 
@@ -180,7 +180,7 @@
                  Some have even gotten so skilled they can create multiple at once.
             </p>
             </div>
-            <img>
+            <img src="Assets/images/boulder.svg" >
         </div>
         <div class="spell-r">
             <div>
@@ -196,7 +196,7 @@
                 One can only cast and hope they don't die from the aftermath.
             </p>
             </div>
-            <img>
+            <img src="Assets/images/tremor.svg" width="400px">
         </div>
     </section>
 
@@ -216,7 +216,7 @@
                 They are quite handy when thet are thrown in at random.
             </p>
             </div>
-            <img>
+        <img src="Assets/images/winddisc.svg">
         </div>
         <div class="spell-r">
             <div>
@@ -231,7 +231,7 @@
                 This spell can also be mixed with any flame spell to create a formidable combination.
             </p>
             </div>
-            <img>
+            <img src="Assets/images/tornado.svg">
         </div>
     </section>
 
@@ -243,7 +243,7 @@
               In most cases a Wizard would specialize specifically in healing and medicines,
                however some Wizards learn a spell or two for their own safety.
         </p>
-        <div class="pain-killer">
+        <div class="heal">
             <h3>Pain Killer</h3>
             <h4>
                 Mana Cost - 3<br>
@@ -253,7 +253,7 @@
                 This spell merely stops pain for a set amount of time.  It has no effect on extreme wounds.  
             </p>
         </div>
-        <div class="lesser-heal">
+        <div class="heal">
             <h3>Lesser Heal</h3>
             <h4>
                 Mana Cost - 8<br>
@@ -264,18 +264,8 @@
                  On average this spell takes a few minutes to work.</p>
 
         </div>
-        <div class="lesser-heal">
-            <h3>Lesser Heal</h3>
-            <h4>
-                Mana Cost - 8<br>
-                Mastery - Intermediate
-            </h4>
-            <p>Lesser heal is great for healing small cuts and bruises. 
-                 It also helps quicken the mitosis process for slightly deeper cuts. 
-                 On average this spell takes a few minutes to work.</p>
-
-        </div>
-        <div class="greater-heal">
+       
+        <div class="heal">
             <h3>Greater Heal</h3>
             <h4>
                 Mana Cost - 20<br>
@@ -299,6 +289,7 @@
             Enchantments last for a set time frame of usually a few minutes.  
             They require a decent amount of focus, and since it lasts for a duration they take a substantial amount of mana.  
         </p>
+        <div class="enchantment-duo">
         <div class="flame-e">
             <h3>
                 Flame Enchantment
@@ -327,6 +318,8 @@
                 After touching a surface for long enough, it will cool it so much to the point it can shatter.
             </p>
         </div>
+        </div>
+        <div class="enchantment-duo">
         <div class="poison-e">
             <h3>
                 Poison Enchantment
@@ -351,6 +344,8 @@
                 This causes your blade to glow brightly.  Any Darkborn enemies will take more damage due to the light.
             </p>
         </div>
+        </div>
+        <div class="enchantment-duo">
         <div class="dark-e">
             <h3>
                 Dark Enchantment
@@ -377,6 +372,7 @@
                  It allows you to shoot arcs of pure magic straight from your blade when you swing your sword.  
                 Additionally, it also strengthens your armament.
             </p>
+        </div>
         </div>
         
      </section>
