more css addded. we up

--- a/spells.html
+++ b/spells.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wizards-Wiki-Spells</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jim+Nightshade&display=swap" rel="stylesheet">
@@ -44,13 +44,13 @@
             <li>Elemental Spells</li>
             <ul>
                 <li> <a href="#fire-spells">Fire Spells</a> </li>
-                <li>Water Spells</li>
-                <li>Lightening Spells</li>
-                <li>Earth Spells</li>
-                <li>Wind Spells</li>
+                <li> <a href="#water-spells">Water Spells</a></li>
+                <li><a href="#lightening-spells">Lightening Spells</a></li>
+                <li><a href="#earth-spells">Earth Spells</a></li>
+                <li><a href="#wind-spells">Wind Spells</a></li>
             </ul>
-            <li>Healing Spells</li>
-            <li>Weapon Enchantments</li>
+            <li><a href="#healing-spells">Healing Spells</a></li>
+            <li><a href="#enchantments">Weapon Enchantments</a></li>
         </ol>
     </section>
 
@@ -216,7 +216,7 @@
                 They are quite handy when thet are thrown in at random.
             </p>
             </div>
-        <img src="Assets/images/winddisc.svg">
+        <img src="Assets/images/winddisc.svg" width="350px">
         </div>
         <div class="spell-r">
             <div>
@@ -231,7 +231,7 @@
                 This spell can also be mixed with any flame spell to create a formidable combination.
             </p>
             </div>
-            <img src="Assets/images/tornado.svg">
+            <img src="Assets/images/tornado.svg" width="450px">
         </div>
     </section>
 
