--- a/staffs.html
+++ b/staffs.html
@@ -99,7 +99,7 @@
                 While there are numerous amounts of Wood types, what we have presented here are some of the more well known and sought after ones. 
             </p>
         </div>
-        <div class="mahogany">
+        <div class="wood">
             <h3>Midland Mahogany</h3>
             <h4>Type - All Arounder</h4>
             <p>
@@ -108,7 +108,7 @@
                 Its a great starter style wood, and can endure a good deal of spells.
             </p>
         </div>
-        <div class="oak">
+        <div class="wood">
             <h3>Orcs Oak</h3>
             <h4>Type - Fire and Wind Amplifier<br>
                 Slightly Dense
@@ -120,7 +120,7 @@
                 this wood amplifies Fire and Wind type spells.
             </p>
         </div>
-        <div class="darkwood">
+        <div class="wood">
             <h3>Elven Darkwood</h3>
             <h4>Type - Earth Amplifier<br>
                 Very Dense
@@ -132,7 +132,7 @@
                  Due to this, this wood greatly strengthens Earth type magics.
             </p>
         </div>
-        <div class="whitewood">
+        <div class="wood">
             <h3>Elven Whitewood</h3>
             <h4>Type - Healing Amplifier<br>
                 No Density
@@ -146,7 +146,7 @@
                       it’s spirit would break causing it to shatter.
             </p>
         </div>
-        <div class="marblewood">
+        <div class="wood">
             <h3>Grand Marblewood</h3>
             <h4>Type - Lightening Amplifier<br>
                 Medium Density
@@ -160,7 +160,7 @@
                  This not only explains it affinity with lighting, but also its marble pattern.
             </p>
         </div>
-        <div class="kingswood">
+        <div class="wood">
             <h3>Royal Kingswood</h3>
             <h4>Type - Water Amplifier<br>
                 High Density
@@ -174,7 +174,7 @@
                   The odds of someone other than a Royal Guard possessing such a wood is extremely unlikely.
             </p>
         </div>
-        <div class="bloodwood">
+        <div class="wood">
             <h3>Goblins Bloodwood</h3>
             <h4>Type - Fire Amplifier<br>
                 Low Density
