extra stuff added spacing and stuff

--- a/spells.html
+++ b/spells.html
@@ -38,7 +38,7 @@
             One knows well that learning a new spell can be troublesome, so we hope to save you the time in hopes you dont learn a spell ill suited to your persons! 
             Take a gander why don’t you, its all free!</p>
     </section>
-    <section>
+    <section id="toc-index">
         <h3>Table of Contents</h3>
         <ol type="I">
             <li>Elemental Spells</li>
@@ -295,7 +295,7 @@
                 Flame Enchantment
             </h3>
             <h4>
-                Mana Cost - 15
+                Mana Cost - 15 <br>
                 Mastery - Expert
             </h4>
             <p>
@@ -309,7 +309,7 @@
                 Ice Enchantment
             </h3>
             <h4>
-                Mana Cost - 15
+                Mana Cost - 15 <br>
                 Mastery - Expert
             </h4>
             <p>
@@ -325,7 +325,7 @@
                 Poison Enchantment
             </h3>
             <h4>
-                Mana Cost - 15
+                Mana Cost - 15 <br>
                 Mastery - Expert
             </h4>
             <p>
@@ -337,7 +337,7 @@
                 Light Enchantment
             </h3>
             <h4>
-                Mana Cost - 15
+                Mana Cost - 15 <br>
                 Mastery - Expert
             </h4>
             <p>
@@ -351,7 +351,7 @@
                 Dark Enchantment
             </h3>
             <h4>
-                Mana Cost - 15
+                Mana Cost - 15 <br>
                 Mastery - Expert
             </h4>
             <p>
@@ -364,7 +364,7 @@
                 Magic Enchantment
             </h3>
             <h4>
-                Mana Cost - 15
+                Mana Cost - 15 <br>
                 Mastery - Expert
             </h4>
             <p>
