--- a/staffs.html
+++ b/staffs.html
@@ -40,7 +40,7 @@
             the power that comes with them is to be considered equally. 
         </p>
     </section>
-    <section id="toc-staffs">
+    <section id="toc-index">
         <h3>Table of Contents</h3>
         <ol type="I">
             <li>Wood Types</li>
