Added nav to all pages.  Created newsletter jsut need help styling

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="staffs.html">
-                        
+                    <a href="#newsletter-whole">
+                        <img src="Assets/images/Mail_icon.svg"> Newsletter
                     </a>
                 </li>
             </menu>
@@ -130,7 +130,16 @@
         <section id>
 
         </section>
+        <section id="newsletter-whole">
+            <h2>Seeking more?</h2> 
+            <form>
+                <label for="newsletter">Enter your email</label><br>
+                <input id="newsletter" type="email" placeholder="wizardsrcool@email.com">
+                <button>Subscribe</button>
+            </form>
+        </section>
     </footer>
+
     
 </body>
 </html>
