--- a/spells.html
+++ b/spells.html
@@ -26,10 +26,28 @@
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
-    <section>
+    <header>
         <h1>Wizard's Wiki</h1>
-        <nav></nav>
-    </section>
+        <nav>
+            <menu id="main-menu">
+                <li>
+                    <a href="spells.html">
+                         <img src="Assets/images/hat.svg"> Home Page
+                     </a>
+                </li>
+                <li>
+                    <a href="staffs.html">
+                         <img src="Assets/images/staff-svg.svg">Staffs Page
+                    </a>
+                </li>
+                <li>
+                    <a href="#newsletter-whole">
+                        <img src="Assets/images/Mail_icon.svg"> Newsletter
+                    </a>
+                </li>
+            </menu>
+        </nav>
+    </header>
     <section>
         <h2>The Spells of a Wizard</h2>
         <p>A Wizard is not a Wizard without his spells.  There is an incomprehensible amount of spells out and about in this wonderful world, and we aim to teach! 
