--- a/staffs.html
+++ b/staffs.html
@@ -26,10 +26,28 @@
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
-    <section>
+    <header>
         <h1>Wizard's Wiki</h1>
-        <nav></nav>
-    </section>
+        <nav>
+            <menu id="main-menu">
+                <li>
+                    <a href="index.html">
+                         <img src="Assets/images/hat.svg">Home Page
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html">
+                         <img src="Assets/images/Group 2.svg"> Spells Page
+                     </a>
+                </li>
+                <li>
+                    <a href="#newsletter-whole">
+                        <img src="Assets/images/Mail_icon.svg"> Newsletter
+                    </a>
+                </li>
+            </menu>
+        </nav>
+    </header>
     <section id="staffs-of-wiz">
         <h2>The Staffs of a Wizard</h2>
         <p>
