small changes.  Preparing for the final touches etc

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Milonga&display=swap" rel="stylesheet">
 
-<link rel="icon" type=""
+<link rel="icon" type="">
 
 
     <link rel="stylesheet" href="Styles/styles.css">
@@ -83,7 +83,7 @@
                 </ul>
                 <p>For an even deeper peek into the spells of the world, check out the spells page!</p>
             </div>
-            <div>
+            <div class="spell-para">
                 <h3>Spell Casting Techniques</h3>
                 <p>Casting a spell is not as simple as learning, and casting.  
                     The art of a spell takes time to master, as do most things in this wonderful world. 
@@ -92,7 +92,7 @@
                     Certain spells require flicks and swooshes, perhaps a small phrase, and some need extreme focus.  
                     Learning the specifics, will make you an all around better spell caster.</p>
             </div>
-            <div>
+            <div class="spell-para">
                 <h3>Physical Strength</h3>
                 <p>Most Wizards have very low physical strength, and little to no hand to hand combat knowledge.  
                     You may wonder why this is important, as do most.  
@@ -131,7 +131,6 @@
 
         </section>
         <section id="newsletter-whole">
-            <h2>Seeking more?</h2> 
             <form>
                 <label for="newsletter">Enter your email</label><br>
                 <input id="newsletter" type="email" placeholder="wizardsrcool@email.com">
