--- a/spells.html
+++ b/spells.html
@@ -73,7 +73,7 @@
     </section>
 
     <!-- ELEMENTAL SPELL SECTION-->
-    <section>
+    <section id="elemental-spell">
         <h2>Elemental Spells</h2>
         <p>These spells hinge strongly on the use of the natural elements of the world.  
             These are by far the most common types of spells used, however higher level wizards know how to combine them to make them much more formidable. 
