started scroll animation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
+
+    <div class="scroll-animation"> </div>
+    
     <header>
         <h1>Wizard's Wiki</h1>
         <nav>
