more scroll troubles

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-    <div class="scroll-animation"> </div>
+    <div id="scroll-animation"> </div>
     
     <header>
         <h1>Wizard's Wiki</h1>
