--- a/spells.html
+++ b/spells.html
@@ -48,6 +48,7 @@
             </menu>
         </nav>
     </header>
+    <main>
     <section>
         <h2>The Spells of a Wizard</h2>
         <p>A Wizard is not a Wizard without his spells.  There is an incomprehensible amount of spells out and about in this wonderful world, and we aim to teach! 
@@ -394,5 +395,6 @@
         </div>
         
      </section>
+    </main>
 </body>
 </html>
