--- a/staffs.html
+++ b/staffs.html
@@ -48,6 +48,7 @@
             </menu>
         </nav>
     </header>
+    <main>
     <section id="staffs-of-wiz">
         <h2>The Staffs of a Wizard</h2>
         <p>
@@ -289,5 +290,6 @@
         <img src="Assets/images/Smoothed.svg">
         </div>
     </section>
+    </main>
 </body>
 </html>
