scroll almost finished

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <body>
 
     <div id="scroll-animation"> </div>
+    <div id="scroll-animation-top"> </div>
     
     <header>
         <h1>Wizard's Wiki</h1>
@@ -117,6 +118,7 @@
                 Here you can learn about them, as well as what makes certain staffs so sought after.</p>
         </section>
     </main>
+    
     <footer>
         <h2>Seeking More?</h2>
         <section id="related-articles">
