newsletter css in progress

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
         <section id="newsletter-whole">
             <form>
                 <label for="newsletter">Enter your email</label><br>
-                <input id="newsletter" type="email" placeholder="wizardsrcool@email.com">
-                <button>Subscribe</button>
+                <input id="newsletter" type="email" placeholder="wizardsrcool@w-mail.com">
+                <button id="news-button">Subscribe</button>
             </form>
         </section>
     </footer>
