--- a/spells.html
+++ b/spells.html
@@ -26,6 +26,10 @@
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
+
+    <div id="scroll-animation"> </div>
+    <div id="scroll-animation-top"> </div>
+
     <header>
         <h1>Wizard's Wiki</h1>
         <nav>
