scroll has been completed. Newsletter worked out

--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
         </section>
         <section id="newsletter-whole">
             <form>
-                <label for="newsletter">Enter your email</label><br>
-                <input id="newsletter" type="email" placeholder="wizardsrcool@w-mail.com">
+                <div id="newsletter-bg">
+                <input id="newsletter" type="email" placeholder="Enter your W-mail here!">
+                </div> 
                 <button id="news-button">Subscribe</button>
             </form>
         </section>
