--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div id="newsletter-bg">
                 <input id="newsletter" type="email" placeholder="Enter your W-mail here!">
                 </div> 
-                <button id="news-button">Subscribe</button>
+                <button id="news-button">Subscribe</button> <img src="Assets/images/button-v3.svg" id="star-button" alt="">
             </form>
         </section>
     </footer>
