--- a/spells.html
+++ b/spells.html
@@ -64,7 +64,7 @@
     <section id="toc-index">
         <h3>Table of Contents</h3>
         <ol type="I">
-            <li>Elemental Spells</li>
+            <li><a href="#elemental-spell">Elemental Spells</a></li>
             <ul>
                 <li> <a href="#fire-spells">Fire Spells</a> </li>
                 <li> <a href="#water-spells">Water Spells</a></li>
