--- a/staffs.html
+++ b/staffs.html
@@ -66,7 +66,7 @@
     <section id="toc-index">
         <h3>Table of Contents</h3>
         <ol type="I">
-            <li>Wood Types</li>
+            <li><a href="#wood-types">Wood Types</a></li>
             <ul>
                 <li>Midland Mahogany</li>
                 <li>Orcs Oak</li>
@@ -76,7 +76,7 @@
                 <li>Royal Kingswood</li>
                 <li>Goblins Bloodwood</li>
             </ul>
-            <li>Magic Crystals</li>
+            <li><a href="#magic-crystals">Magic Crystals</a></li>
             <ul>
                 <li>Rounded</li>
                 <li>Jagged</li>
