--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
 
         </section>
+        <section id="toc-flex">
         <section id="toc-index">
             <h3>Table of Contents</h3>
             <ol type="I" class="list">
@@ -69,6 +70,7 @@
                 <li>Wizard Staffs</li>
             </ol>
         </section>
+    </section>
         <section id="intro-to-wizards">
             <h2>Introduction To Wizards</h2>
             <p>Wizards have captured our imagination for centuries, appearing in folklore, literature, and popular media. 
