--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </ul>
                 <p>For an even deeper peek into the spells of the world, check out the spells page!</p>
             </div>
-            <div class="spell-para">
+            <div class="spell-cast-tech">
                 <h3>Spell Casting Techniques</h3>
                 <p>Casting a spell is not as simple as learning, and casting.  
                     The art of a spell takes time to master, as do most things in this wonderful world. 
@@ -98,7 +98,7 @@
                     Certain spells require flicks and swooshes, perhaps a small phrase, and some need extreme focus.  
                     Learning the specifics, will make you an all around better spell caster.</p>
             </div>
-            <div class="spell-para">
+            <div class="spell-phys">
                 <h3>Physical Strength</h3>
                 <p>Most Wizards have very low physical strength, and little to no hand to hand combat knowledge.  
                     You may wonder why this is important, as do most.  
@@ -107,10 +107,11 @@
                     Strengthening yourself and your muscles will directly affect how strong your spells are.  Just as you train to learn a spell, train to cast it as well.   
                     As the great Wizard of Light, Marshfinkle once said, “ A physically able Wizard, is a physically capable Wizard.”
                 </p>
+                <img id="marshfinkle" src="Assets/images/Marshfinkle.svg" alt="The Great Wizard, Marshfinkle of Light">
             </div>
 
         </section>
-        <section>
+        <section id="wiz-staffs">
             <h2>Wizard Staffs</h2>
             <h3>Symbolism and Design</h3>
             <p>While they can aid in walking, they offer so much more.  
