tidying up. staffs page refuses to adhere to media query

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
                     As the great Wizard of Light, Marshfinkle once said, “ A physically able Wizard, is a physically capable Wizard.”
                 </p>
                 <img id="marshfinkle" src="Assets/images/Marshfinkle.svg" alt="The Great Wizard, Marshfinkle of Light">
+                <img id="blue-gem" src="Assets/images/blue-gem.svg" alt="A Blue Magic Crystal">
+                <img id="red-gem" src="Assets/images/red-gem.svg" alt="A Red Magic Crystal">
             </div>
 
         </section>
