--- a/spells.html
+++ b/spells.html
@@ -53,7 +53,7 @@
         </nav>
     </header>
     <main>
-    <section>
+    <section id="spell-page-intro">
         <h2>The Spells of a Wizard</h2>
         <p>A Wizard is not a Wizard without his spells.  There is an incomprehensible amount of spells out and about in this wonderful world, and we aim to teach! 
             Here you will find a comprehensive list of spells ranging from elemental magics, and healing spells. 
