--- a/spells.html
+++ b/spells.html
@@ -35,7 +35,7 @@
         <nav>
             <menu id="main-menu">
                 <li>
-                    <a href="spells.html">
+                    <a href="index.html">
                          <img src="Assets/images/hat.svg"> Home Page
                      </a>
                 </li>
